restful-web-services/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restful-web-services
  labels:
    app: restful-web-services
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: restful-web-services
